# musl_getopt

./: CMakeLists.txt  LICENSE  README.md
include/: musl_getopt.h
src/: musl_getopt.c  musl_getopt_long.c
